# MAI_OOPlabs

./: README.md
oop_exercise_01/: Address.hpp  CMakeLists.txt  README.md  Vector.hpp  main.cpp  test_1.txt
oop_exercise_03/: CMakeLists.txt  README.md  figure.h  hexagon.cpp  hexagon.h  main.cpp  octagon.cpp  octagon.h  point.h  test_1.txt  test_2.txt  triangle.cpp  triangle.h
oop_exercise_04/: README.md  classes.h  figures.h  main.cpp  point.h  templates.h  test_01.txt  test_02.txt
oop_exercise_05/: README.md  main.cpp  makefile  queue.hpp  rectagle.hpp
oop_exercise_06/: README.md  allocator.h  main.cpp  queue.h  rectangle.h  stack.h  vertex.h
oop_exercise_07/: CMakeLists.txt  Document.cpp  Document.h  README.md  builder.h  canvas.h  figure.h  hexagon.cpp  hexagon.h  loader.cpp  loader.h  main.cpp  octagon.cpp  octagon.h  sdl.cpp  sdl.h  triangle.cpp  triangle.h  vertex.h
oop_exercise_08/: CMakeLists.txt  README.md  factory.h  figure.h  main.cpp  point.h  subscriber.h  test_1.txt  test_2.txt
